manifests/application/00-librespeed-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    app.kubernetes.io/instance: librespeed
