manifests/application/librespeed-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  namespace: application
  labels:
    app.kubernetes.io/instance: librespeed
    app.kubernetes.io/name: librespeed
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/instance: librespeed
    app.kubernetes.io/name: librespeed
