manifests/application/librespeed-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librepeed-ingress
  namespace: application
  labels:
    app.kubernetes.io/instance: librespeed
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: speedtest.omd.itruslan.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: librespeed
                port:
                  number: 80
